--- a/.env
+++ b/.env
@@ -43,4 +43,4 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
-AUTHORS="Gabriele Nicotra & Salvatore La Torre"
+AUTHORS="La Torre Salvatore & Nicotra Gabriele"
